manifests/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: ewallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: 123456789012.dkr.ecr.ap-southeast-1.amazonaws.com/ewallet-frontend-service:latest
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ewallet
spec:
  selector:
    app: frontend-service
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
  type: ClusterIP
