manifests/wallet-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: ewallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-service
  template:
    metadata:
      labels:
        app: wallet-service
    spec:
      containers:
      - name: wallet-service
        image: 123456789012.dkr.ecr.ap-southeast-1.amazonaws.com/ewallet-wallet-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
  namespace: ewallet
spec:
  selector:
    app: wallet-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
  type: ClusterIP
